# workhorse

./: .gitignore  LICENSE  README.md  format.sh  workhorse.cabal
.github/workflows/: ci.yml
src/Control/Concurrent/: Workhorse.hs
src/Control/Concurrent/Workhorse/: Internal.hs  Lifted.hs
test/: Main.hs
